[package]
name = "chunked-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ['env-filter'] }
hyper = "1.10.1"
hyper-util = "0.1.20"
axum = "0.8.9"
axum-metrics = "0.2"
metrics-exporter-prometheus = "0.16"
tower-http = { version = "0.7.0", features = ["cors"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
futures-util = "0.3.32"
arc-swap = "1.9.1"
async-stream = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
